--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -360,11 +360,11 @@
                     rule: ['required', 'phone'],
                     message: 'Phone number is required and must be 10-15 digits.'
                 },
-                {
-                    field: 'country',
-                    rule: 'required',
-                    message: 'Country is required.'
-                },
+                // {
+                //     field: 'country',
+                //     rule: 'required',
+                //     message: 'Country is required.'
+                // },
                 {
                     field: 'clinic',
                     rule: 'required',
