--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -96,16 +96,16 @@
                                             </div>
                                         </div>
                                         <div class="custom-select__options">
-                                            <span class="custom-select__option" data-value="malaysia">Malaysia</span>
-                                            <span class="custom-select__option" data-value="thailand">Thailand</span>
-                                            <span class="custom-select__option" data-value="singapore">Singapore</span>
+                                            <span class="custom-select__option" data-value="Malaysia">Malaysia</span>
+                                            <span class="custom-select__option" data-value="Singapore">Singapore</span>
+                                            <span class="custom-select__option" data-value="Thailand">Thailand</span>
                                         </div>
                                     </div>
                                     <select id="country" name="country" style="display: none;">
                                         <option value="">Select</option>
-                                        <option value="malaysia" <%= user.country === 'malaysia' ? 'selected' : '' %>>Malaysia</option>
-                                        <option value="singapore" <%= user.country === 'singapore' ? 'selected' : '' %>>Singapore</option>
-                                        <option value="thailand" <%= user.country === 'thailand' ? 'selected' : '' %>>Thailand</option>
+                                        <option value="Malaysia" <%= user.country === 'Malaysia' ? 'selected' : '' %>>Malaysia</option>
+                                        <option value="Singapore" <%= user.country === 'Singapore' ? 'selected' : '' %>>Singapore</option>
+                                        <option value="Thailand" <%= user.country === 'Thailand' ? 'selected' : '' %>>Thailand</option>
                                     </select>
                                 </div>
                             </div>
@@ -148,40 +148,40 @@
                                             </div>
                                         </div>
                                         <div class="custom-select__options">
-                                            <span class="custom-select__option" data-value="selangor">Selangor</span>
-                                            <span class="custom-select__option" data-value="kuala_lumpur">Kuala Lumpur</span>
-                                            <span class="custom-select__option" data-value="penang">Penang</span>
-                                            <span class="custom-select__option" data-value="johor">Johor</span>
-                                            <span class="custom-select__option" data-value="perak">Perak</span>
-                                            <span class="custom-select__option" data-value="kedah">Kedah</span>
-                                            <span class="custom-select__option" data-value="kelantan">Kelantan</span>
-                                            <span class="custom-select__option" data-value="terengganu">Terengganu</span>
-                                            <span class="custom-select__option" data-value="pahang">Pahang</span>
-                                            <span class="custom-select__option" data-value="negeri_sembilan">Negeri Sembilan</span>
-                                            <span class="custom-select__option" data-value="melaka">Melaka</span>
-                                            <span class="custom-select__option" data-value="perlis">Perlis</span>
-                                            <span class="custom-select__option" data-value="sabah">Sabah</span>
-                                            <span class="custom-select__option" data-value="sarawak">Sarawak</span>
-                                            <span class="custom-select__option" data-value="other">Other</span>
+                                            <span class="custom-select__option" data-value="Selangor">Selangor</span>
+                                            <span class="custom-select__option" data-value="Kuala Lumpur">Kuala Lumpur</span>
+                                            <span class="custom-select__option" data-value="Penang">Penang</span>
+                                            <span class="custom-select__option" data-value="Johor">Johor</span>
+                                            <span class="custom-select__option" data-value="Perak">Perak</span>
+                                            <span class="custom-select__option" data-value="Kedah">Kedah</span>
+                                            <span class="custom-select__option" data-value="Kelantan">Kelantan</span>
+                                            <span class="custom-select__option" data-value="Terengganu">Terengganu</span>
+                                            <span class="custom-select__option" data-value="Pahang">Pahang</span>
+                                            <span class="custom-select__option" data-value="Negeri Sembilan">Negeri Sembilan</span>
+                                            <span class="custom-select__option" data-value="Melaka">Melaka</span>
+                                            <span class="custom-select__option" data-value="Perlis">Perlis</span>
+                                            <span class="custom-select__option" data-value="Sabah">Sabah</span>
+                                            <span class="custom-select__option" data-value="Sarawak">Sarawak</span>
+                                            <span class="custom-select__option" data-value="Other">Other</span>
                                         </div>
                                     </div>
                                     <select id="state" name="state" style="display: none;">
                                         <option value="">Select</option>
-                                        <option value="selangor" <%= user.state === 'selangor' ? 'selected' : '' %>>Selangor</option>
-                                        <option value="kuala_lumpur" <%= user.state === 'kuala_lumpur' ? 'selected' : '' %>>Kuala Lumpur</option>
-                                        <option value="penang" <%= user.state === 'penang' ? 'selected' : '' %>>Penang</option>
-                                        <option value="johor" <%= user.state === 'johor' ? 'selected' : '' %>>Johor</option>
-                                        <option value="perak" <%= user.state === 'perak' ? 'selected' : '' %>>Perak</option>
-                                        <option value="kedah" <%= user.state === 'kedah' ? 'selected' : '' %>>Kedah</option>
-                                        <option value="kelantan" <%= user.state === 'kelantan' ? 'selected' : '' %>>Kelantan</option>
-                                        <option value="terengganu" <%= user.state === 'terengganu' ? 'selected' : '' %>>Terengganu</option>
-                                        <option value="pahang" <%= user.state === 'pahang' ? 'selected' : '' %>>Pahang</option>
-                                        <option value="negeri_sembilan" <%= user.state === 'negeri_sembilan' ? 'selected' : '' %>>Negeri Sembilan</option>
-                                        <option value="melaka" <%= user.state === 'melaka' ? 'selected' : '' %>>Melaka</option>
-                                        <option value="perlis" <%= user.state === 'perlis' ? 'selected' : '' %>>Perlis</option>
-                                        <option value="sabah" <%= user.state === 'sabah' ? 'selected' : '' %>>Sabah</option>
-                                        <option value="sarawak" <%= user.state === 'sarawak' ? 'selected' : '' %>>Sarawak</option>
-                                        <option value="other" <%= user.state === 'other' ? 'selected' : '' %>>Other</option>
+                                        <option value="Selangor" <%= user.state === 'Selangor' ? 'selected' : '' %>>Selangor</option>
+                                        <option value="Kuala Lumpur" <%= user.state === 'Kuala Lumpur' ? 'selected' : '' %>>Kuala Lumpur</option>
+                                        <option value="Penang" <%= user.state === 'Penang' ? 'selected' : '' %>>Penang</option>
+                                        <option value="Johor" <%= user.state === 'Johor' ? 'selected' : '' %>>Johor</option>
+                                        <option value="Perak" <%= user.state === 'Perak' ? 'selected' : '' %>>Perak</option>
+                                        <option value="Kedah" <%= user.state === 'Kedah' ? 'selected' : '' %>>Kedah</option>
+                                        <option value="Kelantan" <%= user.state === 'Kelantan' ? 'selected' : '' %>>Kelantan</option>
+                                        <option value="Terengganu" <%= user.state === 'Terengganu' ? 'selected' : '' %>>Terengganu</option>
+                                        <option value="Pahang" <%= user.state === 'Pahang' ? 'selected' : '' %>>Pahang</option>
+                                        <option value="Negeri Sembilan" <%= user.state === 'Negeri Sembilan' ? 'selected' : '' %>>Negeri Sembilan</option>
+                                        <option value="Melaka" <%= user.state === 'Melaka' ? 'selected' : '' %>>Melaka</option>
+                                        <option value="Perlis" <%= user.state === 'Perlis' ? 'selected' : '' %>>Perlis</option>
+                                        <option value="Sabah" <%= user.state === 'Sabah' ? 'selected' : '' %>>Sabah</option>
+                                        <option value="Sarawak" <%= user.state === 'Sarawak' ? 'selected' : '' %>>Sarawak</option>
+                                        <option value="Other" <%= user.state === 'Other' ? 'selected' : '' %>>Other</option>
                                     </select>
                                 </div>
                             </div>
@@ -275,6 +275,12 @@
     <script src="/assets/js/axios.min.js"></script>
     <script src="/assets/js/toast.js"></script>
     <script>
+        // Helper function to capitalize first letter of every word
+        function capitalizeWords(str) {
+            if (!str) return str;
+            return str.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ');
+        }
+        
         // Load navigation rail component
         document.addEventListener('DOMContentLoaded', () => {
             loadComponent('navRail', '/components/side-menu');
