--- a/views/user_details.ejs
+++ b/views/user_details.ejs
@@ -126,11 +126,12 @@
                             <span class="label-text">Current Password</span>
                         </label>
                         <div class="input-container">
-                            <input type="password" id="currentPassword" placeholder="************" required>
+                            <input type="password" id="currentPassword" placeholder="************">
                             <button type="button" class="password-toggle" data-target="currentPassword">
                                 <img src="/assets/images/eye-icon.svg" alt="Toggle Password" class="eye-icon">
                             </button>
                         </div>
+                        <div class="validation-message" id="currentPasswordError"></div>
                     </div>
                     <div class="form-field">
                         <div class="label-strength-row">
