--- a/assets/css/add_case.css
+++ b/assets/css/add_case.css
@@ -80,6 +80,7 @@ body {
 
 .content-container {
     width: 100%;
+    height: 100%;
     padding: 2rem;
     border-radius: 12px;
     background: url('/assets/images/content-background-default.png') no-repeat center center;
