--- a/assets/css/create_user.css
+++ b/assets/css/create_user.css
@@ -82,6 +82,7 @@ body {
 
 .content-container {
     width: 100%;
+    height: 100%;
     padding: 2rem;
     border-radius: 12px;
     background: url('/assets/images/content-background-default.png') no-repeat center center;
