--- a/assets/css/user_details.css
+++ b/assets/css/user_details.css
@@ -359,9 +359,6 @@ body {
     color: #767676;
 }
 
-.modal-body {
-    /* padding: 24px; */
-}
 
 /* Form Fields */
 .form-field {
@@ -463,7 +460,7 @@ body {
 
 .password-toggle {
     position: absolute;
-    top: 2px;
+    top: 0px;
     right: 12px;
     background: none;
     border: none;
@@ -497,8 +494,12 @@ body {
 }
 
 .validation-message {
-    font-size: 12px;
-    color: #dc2626;
+    color: var(--Colour-text-danger, #D4382B);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 0.28px;
     margin-top: 4px;
     min-height: 16px;
 }
