--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -359,18 +359,18 @@
                 {
                     field: 'email',
                     rule: ['required', 'email'],
-                    message: 'Email is required and must be valid.'
+                    message: 'Email is required.'
                 },
                 {
                     field: 'phoneNumber',
                     rule: ['required', 'phone'],
-                    message: 'Phone number is required and must be 10-15 digits.'
+                    message: 'Phone number is required.'
                 },
-                // {
-                //     field: 'country',
-                //     rule: 'required',
-                //     message: 'Country is required.'
-                // },
+                {
+                    field: 'country',
+                    rule: 'required',
+                    message: 'Country is required.'
+                },
                 {
                     field: 'clinic',
                     rule: 'required',
