--- a/views/upload_stl.ejs
+++ b/views/upload_stl.ejs
@@ -447,9 +447,11 @@
             formValidation.clearFormError('uploadStlForm');
 
             // Validate all fields for both draft and submit
+            if (status === '1') {
             const isValid = formValidation.validateFields(validations);
-            if (!isValid) {
-                return;
+                if (!isValid) {
+                    return;
+                }
             }
 
             // Disable button and show loading state
