--- a/views/create_user.ejs
+++ b/views/create_user.ejs
@@ -92,9 +92,9 @@
                                     </div>
                                     <select id="country" name="country" style="display: none;">
                                         <option value="">Select</option>
-                                        <option value="malaysia">Malaysia</option>
-                                        <option value="singapore">Singapore</option>
-                                        <option value="thailand">Thailand</option>
+                                        <option value="Malaysia">Malaysia</option>
+                                        <option value="Singapore">Singapore</option>
+                                        <option value="Thailand">Thailand</option>
                                     </select>
                                 </div>
                             </div>
